--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     implementation 'com.github.iammert:ReadableBottomBar:0.2'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation 'com.github.MrNouri:DynamicSizes:1.0'
 }
