--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,9 @@ dependencies {
     implementation 'com.github.iammert:ReadableBottomBar:0.2'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.github.MrNouri:DynamicSizes:1.0'
+    implementation platform('com.google.firebase:firebase-bom:29.0.2')
+    implementation 'com.google.firebase:firebase-auth'
+    implementation 'com.google.firebase:firebase-database'
+    implementation 'com.google.firebase:firebase-core:20.0.1'
 }
+apply plugin: 'com.google.gms.google-services'
